opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "Iterators for OCaml, both restartable and consumable"
author: [ "Simon Cruanes" "ELLIOTTCABLE" ]
name: "gen"
version: "0.5.3"
build: [
  ["dune" "build" "@install" "-p" name]
  ["dune" "runtest" "-p" name] {with-test}
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "dune" {>= "1.1"}
  "dune-configurator"
  "base-bytes"
  "odoc" {with-doc}
  "qcheck" {with-test}
  "qtest" {with-test}
  "ocaml" { >= "4.03.0" }
]
tags: [ "gen" "iterator" "iter" "fold" ]
homepage: "https://github.com/c-cube/gen/"
doc: "https://c-cube.github.io/gen/"
bug-reports: "https://github.com/c-cube/gen/issues"
dev-repo: "git+https://github.com/c-cube/gen.git"
