opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "Iterators for OCaml, both restartable and consumable"
author: [ "Simon Cruanes" "ELLIOTTCABLE" ]
name: "gen"
version: "1.1"
license: "BSD-2-Clause"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" {>= "1.1"}
  "seq"
  "odoc" {with-doc}
  "qcheck" {with-test}
  "qtest" {with-test}
  "ounit2" {with-test}
  "ocaml" { >= "4.03.0" }
]
tags: [ "gen" "iterator" "iter" "fold" ]
homepage: "https://github.com/c-cube/gen/"
doc: "https://c-cube.github.io/gen/"
bug-reports: "https://github.com/c-cube/gen/issues"
dev-repo: "git+https://github.com/c-cube/gen.git"
