(executable
 (name mkshims)
 (modules mkshims))

(rule
 (targets GenShims_.ml)
 (deps ./mkshims.exe)
 (action (run ./mkshims.exe)))

(rule
  (targets flambda.flags)
  (deps (file mkflags.ml))
  (mode fallback)
  (action (run ocaml ./mkflags.ml)))

(library
  (name gen)
  (public_name gen)
  (wrapped false)
  (modules Gen GenLabels GenM GenClone GenMList GenM_intf Gen_intf GenLabels_intf GenShims_)
  (flags :standard -warn-error -a+8 -safe-string -nolabels)
  (ocamlopt_flags :standard (:include flambda.flags))
  (libraries seq))
